# analysis_of_banking_operations

./: .coverage  .env.example  README.md  empty_file.xlsx  pyproject.toml
reports/: report.json  report.xlsx
src/: main.py  reader.py  reports.py  services.py  utils.py  views.py
tests/: conftest.py  empty_file.xlsx  test_reader.py  test_reports.py  test_services.py  test_utils.py  test_views.py
